twinbox/ansible/roles/security/files/rbac-admin-user.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: admin-user
